# selenium_python

./: .gitignore  README.md  config.py  createdb.sql  db.py  main.py  pyproject.toml  testtest.py
chromedriver/: main.py  seleniumForm_chrome.py  selenium_cookies.py
chromedriver/avito_selenium/: main.py
